Title and content fo the documents has been changed

--- a/prima-lezione.html
+++ b/prima-lezione.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terza lezione</title>
+    <title>Meteo widget</title>
 </head>
 <body>
     <h1>prova</h1>
-    <div>prova</div>
-    <div>prova</div>
+    <div class="wrapper">
+        <div>prova</div>
+        <div>prova</div>
+    </div>
 </body>
 </html>
